--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "mini-Vite",
+  "name": "minivite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "mini-vite": "./bin/mini-vite"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mini-vite",
+    "dev": "tsup -C packages/minivite --watch",
+    "build": "tsup --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.4",
-    "vue": "^3.2.41"
+    "@ice/minivite": "workspace:*"
   }
 }
