--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": {
-    "mini-vite": "./bin/mini-vite"
-  },
+  "type": "module",
   "scripts": {
-    "test": "mini-vite",
-    "dev": "tsup -C packages/minivite --watch",
-    "build": "tsup --minify"
+    "test": "mini-vite"
   },
   "keywords": [],
   "author": "",
